cip-macros/tests/ui/cip_instance_wrong_type_instance_id.stderr
error: The field 'id' must be of type 'u16'
  --> tests/ui/cip_instance_wrong_type_instance_id.rs:14:9
   |
14 |     id: u32,
   |         ^^^

error[E0308]: mismatched types
  --> tests/ui/cip_instance_wrong_type_instance_id.rs:12:1
   |
12 | #[cip_instance]
   | ^^^^^^^^^^^^^^^
   | |
   | expected `u16`, found `u32`
   | expected `u16` because of return type
   |
   = note: this error originates in the attribute macro `cip_instance` (in Nightly builds, run with -Z macro-backtrace for more info)
help: you can convert a `u32` to a `u16` and panic if the converted value doesn't fit
   |
12 | #[cip_instance].try_into().unwrap()
   |                ++++++++++++++++++++
